feature: fingerprint recognition hw ver2

--- a/hw4_fingerprint_1971076_안소현.ipynb
+++ b/hw4_fingerprint_1971076_안소현.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "lhOWjeva2Bgn"
       },
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "background_save": true
@@ -45,26 +45,7 @@
         "id": "twtp0Vdr2L0Y",
         "outputId": "841a8a56-fc21-4751-bc0d-8865da12a8de"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Total processing time: 3458.5863518714905 seconds\n",
-            "Precision: 0.0, Recall: 0.0, Accuracy: 0.0, FAR: nan, FRR: 1.0\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/ansohyeon/.conda/envs/Test_Project_1017/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1517: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/var/folders/qd/lhjwrk_s2t9398k1stxd6v7r0000gn/T/ipykernel_31127/145944183.py:49: RuntimeWarning: invalid value encountered in scalar divide\n",
-            "  FAR = cm[0, 1] / (cm[0, 1] + cm[0, 0])\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import cv2\n",
         "import numpy as np\n",
@@ -84,6 +65,8 @@
         "\n",
         "# 2-1. Minutiae (end, bif) 검출 (벡터화 사용)\n",
         "def detect_minutiae(skeleton):\n",
+        "    start_time = time.time()\n",
+        "    \n",
         "    minutiae = {'end': [], 'bif': []}\n",
         "\n",
         "    kernel = np.array([[1, 1, 1], [1, 10, 1], [1, 1, 1]])\n",
@@ -91,22 +74,26 @@
         "\n",
         "    minutiae['end'] = np.argwhere(filtered == 11).tolist()\n",
         "    minutiae['bif'] = np.argwhere(filtered == 13).tolist()\n",
+        "    \n",
+        "    end_time = time.time()\n",
+        "    print(f\"detect_minutiae processing time: {end_time - start_time:.4f} seconds\")\n",
         "\n",
         "    return minutiae\n",
         "\n",
-        "# 3-1. 매칭 (KD-Tree 사용)\n",
+        "# 3-1. 매칭 (Euclidean Distance 계산)\n",
         "def match_fingerprints(test_minutiae, train_minutiae, threshold):\n",
         "    test_points = np.array(test_minutiae['end'] + test_minutiae['bif'])\n",
         "    train_points = np.array(train_minutiae['end'] + train_minutiae['bif'])\n",
         "\n",
         "    if len(test_points) == 0 or len(train_points) == 0:\n",
-        "        return 0  # 매칭할 포인트가 없으면 0 반환\n",
+        "        return float('inf')  # 매칭할 포인트가 없으면 무한대 반환\n",
         "\n",
+        "    # Calculate Euclidean distances\n",
         "    kd_tree = KDTree(train_points)\n",
-        "    matches = kd_tree.query_ball_point(test_points, threshold)\n",
+        "    distances, _ = kd_tree.query(test_points)\n",
+        "    average_distance = np.mean(distances)\n",
         "\n",
-        "    match_count = sum(len(match) > 0 for match in matches)\n",
-        "    return match_count\n",
+        "    return average_distance\n",
         "\n",
         "# 4. Metric 계산\n",
         "def calculate_metrics(true_labels, predicted_labels):\n",
@@ -114,8 +101,8 @@
         "    recall = recall_score(true_labels, predicted_labels)\n",
         "    accuracy = accuracy_score(true_labels, predicted_labels)\n",
         "    cm = confusion_matrix(true_labels, predicted_labels)\n",
-        "    FAR = cm[0, 1] / (cm[0, 1] + cm[0, 0])\n",
-        "    FRR = cm[1, 0] / (cm[1, 1] + cm[1, 0])\n",
+        "    FAR = cm[0, 1] / (cm[0, 1] + cm[0, 0]) if (cm[0, 1] + cm[0, 0]) > 0 else 0\n",
+        "    FRR = cm[1, 0] / (cm[1, 1] + cm[1, 0]) if (cm[1, 1] + cm[1, 0]) > 0 else 0\n",
         "    return precision, recall, accuracy, FAR, FRR\n",
         "\n",
         "# 데이터 폴더 경로\n",
@@ -158,12 +145,13 @@
         "    \n",
         "    # 순차적으로 처리\n",
         "    for test_image_path in test_images:\n",
+        "        print(f'Processing {test_image_path}')\n",
         "        best_match_score = process_image_pair(test_image_path, train_images, threshold)\n",
         "        all_true_labels.append(1)  # 예시로 모든 매치를 1로 설정\n",
         "        all_predicted_labels.append(1 if best_match_score < threshold else 0)\n",
         "\n",
         "    elapsed_time = time.time() - start_time\n",
-        "    print(f'Total processing time: {elapsed_time} seconds')\n",
+        "    print(f'Total processing time: {elapsed_time:.2f} seconds')\n",
         "\n",
         "    precision, recall, accuracy, FAR, FRR = calculate_metrics(all_true_labels, all_predicted_labels)\n",
         "\n",
